--- a/src/App.css
+++ b/src/App.css
@@ -1,59 +1,261 @@
+/* font-family: 'Adamina', serif;  footer
+font-family: 'Monoton', cursive;  link
+font-family: 'Source Code Pro', monospace;  link
+font-family: 'Ultra', serif; p
+font-family: 'Vidaloka', serif;  head
+ */
 
+/* basic style*/
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  text-decoration-line: none;
+  box-sizing: box-shadow;
 }
-.overall {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
-}
-.ml5 {
-  position: relative;
-  font-weight: 300;
-  font-size: 4.5em;
-  color: #402d2d;
+body,
+p,
+a,
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  color: black;
 }
 
-.ml5 .text-wrapper {
-  position: relative;
-  display: inline-block;
-  padding-top: 0.1em;
-  padding-right: 0.05em;
-  padding-bottom: 0.15em;
-  line-height: 1em;
+li {
+  list-style-type: none;
 }
 
-.ml5 .line {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+html {
+  overflow-x: hidden;
+}
+body {
+  background: #17181a;
+}
+/*headerstyle*/
+.header {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  color: white;
+  margin-top: 10px;
+}
+.header h1 {
+  font-family: "Vidaloka", serif;
+  margin: 10px;
+  grid-column: 1/3;
+  grid-row: 1;
+  text-align: center;
+  justify-self: start;
+  align-self: center;
+  border-bottom: 3px solid #d9c148;
+  font-weight: normal;
+}
+.burger {
+  grid-column: 3/3;
+  z-index: 2;
+  justify-self: end;
+  align-self: center;
+  margin-right: 10px;
+}
+.burger:hover {
+  cursor: pointer;
+}
+
+.line1 {
+  width: 28px;
   height: 3px;
+  background-color: white;
+  margin-top: 23px;
+  border-radius: 3px;
+}
+.line2 {
+  width: 28px;
+  height: 3px;
+  background-color: white;
+  margin-top: 5px;
+  border-radius: 3px;
+}
+.line3 {
+  width: 28px;
+  height: 3px;
+  background-color: white;
+  margin-top: 5px;
+  border-radius: 3px;
+}
+/*contant*/
+.about {
+  margin: 10px;
+  margin-top: 20px;
+  background: #d9c148;
+  font-family: "Adamina", serif;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  border-radius: 15px;
+  min-height: 500px;
+}
+.about h1 {
+  grid-column: 1/9;
+  font-size: 6em;
+  margin-top: 20px;
+  grid-row: 1;
+  justify-self: center;
+  align-self: center;
+  border-bottom: 2px solid black;
+}
+.docabout {
+  grid-column: 1/9;
+  grid-row: 2;
+  justify-self: center;
+  align-self: center;
+  display: grid;
+
+  gap: 25px;
+}
+.docabout h2,
+h3,
+h4 {
+  justify-self: center;
+  align-self: center;
+  text-align: center;
+}
+
+.docabout a {
+  justify-self: center;
+
+  background: white;
+  margin-bottom: 5px;
+  padding: 10px;
+  border-radius: 10px;
+  color: #d9c148;
+}
+/*work*/
+.work {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  margin: 10px;
+}
+.work h1 {
+  font-family: "Vidaloka", serif;
+  margin: 10px;
+  grid-column: 1/8;
+  grid-row: 1;
+  text-align: center;
+  justify-self: start;
+  align-self: center;
+  border-bottom: 3px solid #d9c148;
+  font-weight: normal;
+  color: white;
+}
+.card {
+  grid-column: 1/9;
+
+  margin: auto;
+  align-self: center;
+  justify-self: center;
+  position: relative;
+  color: white;
+}
+.card img {
   width: 100%;
-  background-color: #402d2d;
-  transform-origin: 0.5 0;
+  height: 500px;
 }
 
-.ml5 .ampersand {
-  font-family: "Libre Baskerville", serif;
-
-  font-style: italic;
-  font-weight: 400;
-  width: 1em;
-  margin-right: -0.1em;
-  margin-left: -0.1em;
+.carddoc {
+  position: absolute;
+  top: 0%;
+  right: 0;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.9);
+}
+.card1,
+.card2,
+.card3,
+.card4:hover {
+  color: red;
+  cursor: pointer;
+}
+.card1 {
+  grid-row: 2;
+  position: relative;
+  color: white;
+}
+.card2 {
+  grid-row: 3;
+  position: relative;
+  color: white;
+}
+.card3 {
+  grid-row: 3;
+  position: relative;
+  color: white;
+}
+/*skills*/
+.skills {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  margin: 10px;
+}
+.skills h1 {
+  font-family: "Vidaloka", serif;
+  margin: 10px;
+  grid-column: 1/9;
+  grid-row: 1;
+  text-align: center;
+  justify-self: start;
+  align-self: center;
+  border-bottom: 3px solid #d9c148;
+  font-weight: normal;
+  color: white;
+}
+.skillscard {
+  grid-column: 1/9;
+  grid-row: 2;
+  display: grid;
+  width: 100%;
+  background: rgb(255, 255, 255);
+  min-height: 250px;
+  align-self: center;
+  justify-self: center;
+}
+.skillscard1 {
+  grid-column: 1/2;
+  align-self: center;
+  justify-self: center;
+}
+.skillscard2 {
+  grid-column: 3/4;
+  align-self: center;
+  justify-self: center;
 }
 
-.ml5 .letters {
-  display: inline-block;
-  opacity: 0;
-  font-family: "Libre Baskerville", serif;
+.skillscard3 {
+  grid-column: 5/6;
+  align-self: center;
+  justify-self: center;
 }
+.skillscard4 {
+  grid-column: 1/4;
+  grid-row: 3;
+  align-self: center;
+  justify-self: center;
+}
+.skillscard5 {
+  grid-column: 3/6;
+  grid-row: 3;
+  position: relative;
+  align-self: center;
+  justify-self: center;
+}
+
+.skillscard img {
+  height: 60px;
+  width: 60px;
+}
+.skillscard {
+  text-align: center;
+}
+.skillscard h3 {
+  border-bottom: 3px solid #d9c148;
+}
+
