--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@ body {
   grid-template-columns: repeat(3, 1fr);
   color: white;
   margin-top: 10px;
+
 }
 .header h1 {
   font-family: "Vidaloka", serif;
@@ -94,40 +95,57 @@ body {
   border-radius: 15px;
   min-height: 500px;
 }
-.about h1 {
+.imgprofile {
+  width: 150px;
+  height: 150px;
+
+  clip-path: circle(150px at 1500px 100px);
+  border: 2px solid rgb(170, 111, 111);
   grid-column: 1/9;
-  font-size: 6em;
-  margin-top: 20px;
   grid-row: 1;
   justify-self: center;
-  align-self: center;
-  border-bottom: 2px solid black;
+  align-self: flex-end;
+  z-index: 2;
+  margin-top: 20px;
 }
-.docabout {
+
+.name {
   grid-column: 1/9;
   grid-row: 2;
   justify-self: center;
+  align-self: flex-end;
+}
+
+.abotme {
+  grid-column: 1/9;
+  grid-row: 3;
+  justify-self: center;
   align-self: center;
+}
+.docabout {
+  grid-column: 1/9;
+  grid-row: 4;
   display: grid;
+  grid-template-columns: repeat(4, 1fr);
 
-  gap: 25px;
+  align-self: flex-end;
 }
-.docabout h2,
-h3,
-h4 {
-  justify-self: center;
+.email {
+  grid-column: 1/3;
+  margin-left: 20px;
+}
+.phone {
+  grid-column: 4/4;
+  margin-right: 20px;
+}
+.about a {
+  grid-column: 1/9;
+  grid-row: 6;
+  justify-self: end;
   align-self: center;
-  text-align: center;
-}
-
-.docabout a {
-  justify-self: center;
-
-  background: white;
-  margin-bottom: 5px;
+  margin-right: 30px;
   padding: 10px;
-  border-radius: 10px;
-  color: #d9c148;
+  background: white;
 }
 /*work*/
 .work {
@@ -135,6 +153,7 @@ h4 {
   grid-template-columns: repeat(8, 1fr);
   margin: 10px;
 }
+
 .work h1 {
   font-family: "Vidaloka", serif;
   margin: 10px;
@@ -213,51 +232,80 @@ h4 {
   grid-row: 2;
   display: grid;
   width: 100%;
-  background: rgb(255, 255, 255);
+  background: rgb(218, 211, 211);
+
   min-height: 250px;
   align-self: center;
   justify-self: center;
 }
 .skillscard1 {
-  grid-column: 1/2;
+  grid-column: 1/3;
   align-self: center;
   justify-self: center;
+  margin: 5px;
+  grid-row: 1;
 }
 .skillscard2 {
-  grid-column: 3/4;
+  grid-column: 3/5;
+  grid-row: 1;
   align-self: center;
   justify-self: center;
 }
 
 .skillscard3 {
-  grid-column: 5/6;
+  grid-column: 5/7;
+  grid-row: 1;
+
   align-self: center;
   justify-self: center;
 }
 .skillscard4 {
-  grid-column: 1/4;
-  grid-row: 3;
+  grid-column: 1/3;
+  grid-row: 2;
   align-self: center;
   justify-self: center;
+  margin-bottom: 15px;
 }
 .skillscard5 {
-  grid-column: 3/6;
-  grid-row: 3;
+  grid-column: 3/5;
+  grid-row: 2;
   position: relative;
   align-self: center;
   justify-self: center;
+  margin-bottom: 15px;
 }
 
 .skillscard img {
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
+  margin-top: 15px;
 }
 .skillscard {
   text-align: center;
 }
-.skillscard h3 {
-  border-bottom: 3px solid #d9c148;
+
+.lines {
+  height: 90px;
+  width: 3px;
+  border-radius: 5px;
+  background: #505555;
+  margin-top: 15px;
+  opacity: 0.7;
+  align-self: center;
 }
+.lines1 {
+  grid-column: 3/4;
+  grid-row: 1;
+}
+.lines2 {
+  grid-column: 5/6;
+  grid-row: 1;
+}
+.lines3 {
+  grid-column: 3/4;
+  grid-row: 2;
+}
+
 /*contnat*/
 .contant {
   display: grid;
@@ -282,11 +330,12 @@ h4 {
   display: grid;
 
   width: 100%;
-  background: #00d4ff;
+  background: #994984;
   min-height: 250px;
   align-self: center;
   justify-self: center;
-  min-height: 500px;
+  min-height: 400px;
+  color: white;
 }
 .form1 {
   grid-row: 1;
@@ -307,7 +356,7 @@ h4 {
   grid-row: 6;
 }
 .form7 {
-  grid-row: 7;
+  grid-row: 8;
 }
 .form1,
 .form2,
@@ -323,8 +372,7 @@ h4 {
 .form1,
 .form3,
 .form5 {
-  font-size: 2em;
-  font-weight: bold;
+  font-size: 1.5em;
 }
 .form2,
 .form4 {
@@ -337,12 +385,19 @@ h4 {
   height: 100%;
 }
 .form7 {
-  height: 50%;
-  width: 40%;
   border-radius: 5px;
-  background: #d9c148;
-  font-size: 1.5em;
+  background: white;
+  font-size: 1em;
   font-weight: bold;
+  align-self: center;
+  justify-self: end;
+  margin: 10px;
+  padding: 1rem 2rem;
+  border: 1px solid white;
+  background: none;
+  color: white;
+
+  cursor: pointer;
 }
 /* Footer Section */
 
@@ -355,24 +410,136 @@ h4 {
 }
 .footer h1 {
   font-size: 1em;
- grid-column: 1/8;
- margin: 10px;
+  grid-column: 1/8;
+  margin: 10px;
 }
-.iconsocial  {
+.iconsocial {
   font-size: 2em;
   grid-column: 1/9;
   grid-row: 2;
   margin: 10px;
-display: grid;
-  
+  display: grid;
+}
+.icon1 {
+  grid-column: 2/3;
  
 }
-.icon1{
-  grid-column: 2/3;
-}
-.icon2{
+.icon2 {
   grid-column: 5/6;
 }
-.icon3{
+.icon3 {
   grid-column: 8/9;
+}
+
+/*home*/
+
+.slide {
+  min-height: 500px;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  margin: 10px;
+
+  color: white;
+  background: rgb(34, 34, 34);
+  margin: 10px;
+}
+
+.montian-span {
+  color: #d9c148;
+}
+
+.slide h2 {
+  font-family: "Tajawal", sans-serif;
+  font-size: 3em;
+  grid-row: 2;
+  grid-column: 1/9;
+  align-self: center;
+  justify-self: center;
+  margin: 10px;
+}
+.slide p {
+  grid-row: 3;
+  grid-column: 1/9;
+  align-self: center;
+  justify-self: center;
+  margin: 10px;
+  padding: 3rem 0rem;
+  font-size: 1.5em;
+  color: rgb(207, 207, 207);
+}
+.explore {
+  grid-row: 4;
+  grid-column: 1/9;
+  align-self: center;
+  justify-self: end;
+  margin: 10px;
+  padding: 1rem 2rem;
+  border: 1px solid white;
+  background: none;
+  color: white;
+
+  cursor: pointer;
+}
+
+/* Yellow */
+@media screen and (min-width: 960px) {
+  .slide {
+    margin-top: 20px;
+    font-size: 1.5em;
+    width: 80%;
+    margin: auto;
+    min-height: 95vh;
+  }
+  .slide p {
+    margin: 20px;
+    font-size: 1.2em;
+  }
+  .skills {
+    width: 80%;
+    margin: auto;
+  }
+  .skillscard {
+    font-size: 1.5em;
+    row-gap: 40px;
+    padding: 1em 0;
+  }
+  .work {
+    width: 80%;
+    margin: auto;
+  }
+
+  .card3 {
+    margin-top: 30px;
+  }
+  .card2 {
+    margin-top: 30px;
+  }
+  .card img {
+    width: 100%;
+    height: 600px;
+  }
+  .contant,
+  .header,
+  .footer {
+    width: 80%;
+    margin: auto;
+  }
+  .form2,
+  .form4 {
+    width: 50%;
+    height: 70%;
+    font-size: 1.5em;
+  }
+  .form6 {
+    width: 50%;
+    margin-top: 30px;
+    height: 150%;
+  }
+  .form7 {
+    margin-right: 50px;
+  }
+  .footer {
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
 }
