--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,6 @@ body {
   grid-template-columns: repeat(3, 1fr);
   color: white;
   margin-top: 10px;
-
 }
 .header h1 {
   font-family: "Vidaloka", serif;
@@ -214,6 +213,7 @@ body {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   margin: 10px;
+  position: relative;
 }
 .skills h1 {
   font-family: "Vidaloka", serif;
@@ -228,6 +228,8 @@ body {
   color: white;
 }
 .skillscard {
+  visibility: hidden;
+
   grid-column: 1/9;
   grid-row: 2;
   display: grid;
@@ -269,7 +271,7 @@ body {
 .skillscard5 {
   grid-column: 3/5;
   grid-row: 2;
-  position: relative;
+
   align-self: center;
   justify-self: center;
   margin-bottom: 15px;
@@ -305,7 +307,14 @@ body {
   grid-column: 3/4;
   grid-row: 2;
 }
-
+.black {
+  position: absolute;
+  background: #17181a;
+  grid-column: 1/9;
+  grid-row: 2;
+  width: 100%;
+  height: 100%;
+}
 /*contnat*/
 .contant {
   display: grid;
@@ -414,27 +423,26 @@ body {
   margin: 10px;
 }
 .iconsocial {
-  font-size: 2em;
+  font-size: 1.8em;
   grid-column: 1/9;
-  grid-row: 2;
+
   margin: 10px;
   display: grid;
+  grid-template-columns: repeat(8, 1fr);
 }
 .icon1 {
-  grid-column: 2/3;
- 
+  grid-column: 1/9;
+  grid-row: 2;
 }
 .icon2 {
-  grid-column: 5/6;
+  grid-column: 1/9;
+  grid-row: 3;
 }
-.icon3 {
-  grid-column: 8/9;
-}
-
 /*home*/
 
 .slide {
-  min-height: 500px;
+  visibility: hidden;
+  min-height: 90vh;
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   margin: 10px;
@@ -451,13 +459,14 @@ body {
 .slide h2 {
   font-family: "Tajawal", sans-serif;
   font-size: 3em;
+
   grid-row: 2;
   grid-column: 1/9;
   align-self: center;
   justify-self: center;
   margin: 10px;
 }
-.slide p {
+.pargh {
   grid-row: 3;
   grid-column: 1/9;
   align-self: center;
@@ -467,18 +476,26 @@ body {
   font-size: 1.5em;
   color: rgb(207, 207, 207);
 }
+.pargh p {
+  color: rgb(207, 207, 207);
+}
+
 .explore {
   grid-row: 4;
   grid-column: 1/9;
   align-self: center;
   justify-self: end;
-  margin: 10px;
+  margin: 20px;
   padding: 1rem 2rem;
   border: 1px solid white;
   background: none;
   color: white;
 
   cursor: pointer;
+}
+.explore:hover {
+  background: #d9c148;
+  transition: background 1s ease-in-out;
 }
 
 /* Yellow */
@@ -490,9 +507,9 @@ body {
     margin: auto;
     min-height: 95vh;
   }
-  .slide p {
-    margin: 20px;
-    font-size: 1.2em;
+  .pargh p {
+    margin: 0px 20px;
+    font-size: 1em;
   }
   .skills {
     width: 80%;
